--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,25 +1,81 @@
 body {
-  background-color: #555;
+  background-image: url("../assets/images/twitter-wallpaper-3.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
+/* LOGIN */
 .form-login-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 60%;
-  min-width: 600px;
+  min-width: 500px;
   margin: auto;
-  background-color: #ccc;
+  background-color: #231915;
   border-radius: 12px;
-  padding: 50px;
+  padding: 0 50px 50px 50px;
   margin-top: 5%;
+  color: #ccc;
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
+}
+
+.form-login-container img {
+  width: 200px;
+  align-self: center;
+}
+
+.form-login-container form {
+  padding-top: 0 !important;
+  display: flex;
+  flex-direction: column;
 }
 
 .loginButton {
-  width: 100%;
+  width: 50%;
+  align-self: center;
 }
 
 .signupButton {
-  width: 30%;
+  width: fit-content;
   align-self: center;
+}
+
+/* HOME */
+
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.home-container form {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  min-width: 500px;
+}
+
+.home-container form button {
+  width: 30%;
+}
+
+.tweets-list-container {
+  width: 70%;
+  min-width: 500px;
+}
+
+#postContainer {
+  display: flex;
+  width: 70%;
+  margin-top: 12px;
+  gap: 8px;
+  min-width: 500px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.tweet-buttons {
+  display: flex;
+  gap: 12px;
 }
